# LosslessModelCompression

./: .gitignore  AI_Usage.md  Benchmark.slurm  CMakeLists.txt  CompressionBenchmark.py  CompressionBenchmarkHuffman.py  GenerateWeights.cpp  Paper.rmd  Plot.py  Plot_Script_Old.py  Presentation.pptx  README.md  Submit.slurm  UnifiedPlot.py  compression_results.jsonl  compression_results_2_10_V2.jsonl  compression_results_huffman.jsonl  compression_results_huffman_2_10.jsonl  compression_results_huffman_2_30.jsonl  compression_results_huffman_finegrained.jsonl  compression_results_zstd.jsonl  compression_results_zstd_2_10.jsonl  compression_results_zstd_finegrained.jsonl  compression_results_zstd_finegrained_2_10.jsonl  slurm-98817.out  slurm-98820.out  slurm-98838.out  slurm-98911.out  slurm-98917.out  slurm-98919.out  slurm-98920.out  slurm-98923.out  slurm-98924.out  slurm-99017.out  slurm-99025.out  slurm-99026.out  slurm-99028.out  slurm-99033.out  slurm-99034.out  slurm-99035.out  (+2 more)
OldBenchmarks/: compression_results_2_10_V4.jsonl  compression_results_2_30_Zstd.jsonl  compression_results_huffman_finegrained_2_10.jsonl
OldPlots/PLOTS_UNIFIED_2_10/: VarianceTable.Rmd
OldPlots/PLOTS_UNIFIED_2_30/: VarianceTable.Rmd
OldScripts/: Plot.py  PlotHuffmanResults.py
PLOTS_UNIFIED/: VarianceTable.Rmd
